--- a/packages/wizard-react/demo/src/index.css
+++ b/packages/wizard-react/demo/src/index.css
@@ -95,3 +95,30 @@ button[data-selected="true"],
   --tw-ring-offset-width: 0px !important;
   --tw-ring-width: 1px !important;
 }
+
+/* Fix react-day-picker range selection styling */
+.rdp-day_range_start,
+.rdp-day_range_end,
+.rdp-day_range_middle {
+  background-color: rgb(37 99 235) !important; /* blue-600 */
+  color: white !important;
+}
+
+.rdp-day_range_start:not(.rdp-day_range_end) {
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+}
+
+.rdp-day_range_end:not(.rdp-day_range_start) {
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+}
+
+.rdp-day_range_middle {
+  border-radius: 0 !important;
+}
+
+/* Ensure clean edges on range selection */
+.rdp-day_range_start.rdp-day_range_end {
+  border-radius: 0.375rem !important; /* rounded-md */
+}
