--- a/packages/wizard-react/demo/src/index.css
+++ b/packages/wizard-react/demo/src/index.css
@@ -96,7 +96,28 @@ button[data-selected="true"],
   --tw-ring-width: 1px !important;
 }
 
-/* Airbnb-style date range picker - AGGRESSIVE SPECIFICITY */
+/* Date picker styles - Single date + Range selection */
+
+/* SINGLE DATE SELECTION - Blue filled circle */
+.rdp-day_selected:not(.rdp-day_range_start):not(.rdp-day_range_end) button,
+.rdp .rdp-day_selected:not(.rdp-day_range_start):not(.rdp-day_range_end) button {
+  background-color: rgb(37 99 235) !important; /* blue-600 */
+  color: white !important;
+  border-radius: 50% !important;
+}
+
+.rdp-day_selected:not(.rdp-day_range_start):not(.rdp-day_range_end) button:hover,
+.rdp .rdp-day_selected:not(.rdp-day_range_start):not(.rdp-day_range_end) button:hover {
+  background-color: rgb(29 78 216) !important; /* blue-700 */
+}
+
+/* Today indicator */
+.rdp-day_today button {
+  font-weight: 700;
+  color: rgb(37 99 235) !important;
+}
+
+/* Airbnb-style date RANGE picker - AGGRESSIVE SPECIFICITY */
 
 /* CRITICAL: Range middle days - MUST show light blue fill */
 .rdp .rdp-day_range_middle,
